tests/A2/reject/badFuncCall3.ul
int foo(int x, int y, int z){
    return x+y+z;
}

void main(){
    foo(4, 5);
}